kubernetes/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 3000
