kubernetes/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - immortalkeep.com
      secretName: homepage-ingress-tls
  rules:
    - host: immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homepage
                port:
                  number: 3000
